--- a/nnmbackend/Cargo.toml
+++ b/nnmbackend/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+actix-cors = "0.7.0"
 actix-web = "4.9.0"
 anyhow = "1.0.88"
 aws-config = "1.5.6"
