--- a/nnmbackend/Cargo.toml
+++ b/nnmbackend/Cargo.toml
@@ -13,3 +13,5 @@ aws-sdk-s3 = "1.49.0"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 tokio = { version = "1.40.0", features = ["full"] }
+security-framework = { version = "2.11.1" }
+reqwest = "0.12.7"
