--- a/package.json
+++ b/package.json
@@ -19,12 +19,18 @@
     "@aws-sdk/client-iam": "^3.650.0",
     "@aws-sdk/client-s3": "^3.651.0",
     "@aws-sdk/s3-request-presigner": "^3.651.0",
+    "@shopify/shopify-api": "^11.4.0",
+    "@stripe/stripe-js": "^4.4.0",
+    "@types/shopify-buy": "^2.17.4",
     "autoprefixer": "^10.4.20",
     "aws-sdk": "^2.1691.0",
     "gatsby": "^5.13.7",
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-postcss": "^6.13.1",
+    "gatsby-plugin-sharp": "^5.13.1",
+    "gatsby-source-filesystem": "^5.13.1",
     "gatsby-source-shopify": "^8.13.1",
+    "gatsby-transformer-sharp": "^5.13.1",
     "postcss": "^8.4.45",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
