--- a/nnmbackend/Cargo.toml
+++ b/nnmbackend/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 actix-cors = "0.7.0"
-actix-web = "4.9.0"
+actix-web = { version = "4.9.0", features = ["openssl"] }
 anyhow = "1.0.88"
 aws-config = "1.5.6"
 aws-sdk-dynamodb = "1.45.0"
@@ -15,3 +15,4 @@ serde_json = "1.0.128"
 tokio = { version = "1.40.0", features = ["full"] }
 security-framework = { version = "2.11.1" }
 reqwest = "0.12.7"
+openssl = "0.10.66"
