--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "^10.4.20",
     "aws-sdk": "^2.1691.0",
     "gatsby": "^5.13.7",
+    "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-postcss": "^6.13.1",
     "gatsby-plugin-sharp": "^5.13.1",
@@ -34,6 +35,8 @@
     "postcss": "^8.4.45",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^5.3.0",
     "react-pdf": "^9.1.0",
     "tailwindcss": "^3.4.11"
   },
