Added admin page with AWS Cognito auth integration

--- a/nnmbackend/Cargo.toml
+++ b/nnmbackend/Cargo.toml
@@ -19,3 +19,4 @@ openssl = "0.10.66"
 actix-multipart = "0.7.2"
 futures-util = "0.3.30"
 futures = "0.3.30"
+aws-sdk-cognitoidentityprovider = "1.54.0"
