--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@stripe/stripe-js": "^4.4.0",
     "@types/shopify-buy": "^2.17.4",
     "autoprefixer": "^10.4.20",
+    "aws-jwt-verify": "^4.0.1",
     "aws-sdk": "^2.1691.0",
+    "buffer": "^6.0.3",
     "gatsby": "^5.13.7",
     "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-image": "^3.13.1",
