--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^5.3.0",
     "react-pdf": "^9.1.0",
+    "react-toastify": "^10.0.6",
     "tailwindcss": "^3.4.11"
   },
   "devDependencies": {
